@@ -1191,7 +1191,7 @@
   <property name="title" translatable="yes">gPodder Channel Editor</property>
   <property name="type">GTK_WINDOW_TOPLEVEL</property>
   <property name="window_position">GTK_WIN_POS_CENTER_ON_PARENT</property>
-  <property name="modal">False</property>
+  <property name="modal">True</property>
   <property name="default_width">500</property>
   <property name="resizable">True</property>
   <property name="destroy_with_parent">False</property>
